<resources>
    <string name="base_url">http://setsuna.asdf.com</string>
    <string name="app_name">Setsuna</string>
    <string name="transmit">Transmit</string>
    <string name="receive">Receive</string>
    <string name="ok">OK</string>
    <string name="label_username">Username</string>
    <string name="hint_username">Your SPICE user ID (e.g. P1234567)</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="error_unknown">Unknown error, the app cannot continue. </string>
    <string name="error_connection_invalid">Invalid connection type. </string>
    <string name="please_wait">Please wait...</string>
    <string name="title_sign_in_failed">Sign-in failed</string>
    <string name="error_credentials_invalid">Invalid user ID or password. </string>
    <string name="error_outside_sp">The ATS cannot be used outside SP. </string>
    <string name="title_code_failed">Attendance submission failed</string>
    <string name="error_timed_out">Session timed out. </string>
    <string name="title_code">Attendance submission</string>
    <string name="title_internal">Internal error</string>
    <string name="dismiss">Dismiss</string>
    <string name="error_credentials_disappeared">Please enter your user ID and password. </string>
    <string name="send">Send</string>
    <string name="no_permission">Permission Denied! This app will not work</string>
    <string name="error">Error! </string>
    <string name="action_broadcasting">Broadcasting code to students...</string>
    <string name="stop_broadcast">Stop Broadcast</string>
    <string name="label_prompt_code">Enter ATS Code:</string>
    <string name="broadcast">Broadcast</string>
    <string name="label_cancel">Cancel</string>
    <string name="click_here">There is no database available.Click Here to find out more.</string>
    <string name="here">Here</string>
    <string name="modem_exception">Unfortunately your device does not support modulation</string>
    <string name="quiet_profile">ultrasonic-experimental</string>
</resources>
